Do not create MediaRouterUIService when Media Router is disabled

MRUIService is instantiated at startup to show the Cast toolbar icon.
This CL prevents that if the Media Router feature is disabled.

Bug: 834719
Change-Id: I02fdecb1ca50940c2311d6491698764bc6275ec1
Reviewed-on: https://chromium-review.googlesource.com/1026975
Reviewed-by: Derek Cheng <imcheng@chromium.org>
Commit-Queue: Takumi Fujimoto <takumif@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553783}
Former-commit-id: be5bdeac6a5587e7053d9a5830d41b51cdc9b9f2