chrome/browser/ui/webui/media_router/media_router_ui_service_factory_unittest.cc
@@ -5,6 +5,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include <memory>
 
+#include "base/values.h"
 #include "chrome/browser/media/router/media_router_factory.h"
 #include "chrome/browser/media/router/test/mock_media_router.h"
 #include "chrome/browser/profiles/profile.h"
@@ -12,7 +13,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/browser/ui/toolbar/toolbar_actions_model_factory.h"
 #include "chrome/browser/ui/webui/media_router/media_router_ui_service.h"
 #include "chrome/browser/ui/webui/media_router/media_router_ui_service_factory.h"
+#include "chrome/common/pref_names.h"
 #include "chrome/test/base/testing_profile.h"
+#include "components/sync_preferences/testing_pref_service_syncable.h"
 #include "content/public/test/test_browser_thread_bundle.h"
 #include "testing/gtest/include/gtest/gtest.h"
 
@@ -42,10 +45,7 @@ class MediaRouterUIServiceFactoryUnitTest : public testing::Test {
 
  protected:
   content::TestBrowserThreadBundle thread_bundle_;
-  Profile* profile() { return profile_.get(); }
-
- private:
-  std::unique_ptr<Profile> profile_;
+  std::unique_ptr<TestingProfile> profile_;
 };
 
 TEST_F(MediaRouterUIServiceFactoryUnitTest, CreateService) {
@@ -55,9 +55,17 @@ TEST_F(MediaRouterUIServiceFactoryUnitTest, CreateService) {
   std::unique_ptr<MediaRouterUIService> service(
       static_cast<MediaRouterUIService*>(
           MediaRouterUIServiceFactory::GetInstance()->BuildServiceInstanceFor(
-              profile())));
+              profile_.get())));
   ASSERT_TRUE(service);
   ASSERT_TRUE(service->action_controller());
+}
+
+TEST_F(MediaRouterUIServiceFactoryUnitTest, DoNotCreateServiceWhenDisabled) {
+  profile_->GetTestingPrefService()->SetManagedPref(
+      prefs::kEnableMediaRouter, std::make_unique<base::Value>(false));
+  EXPECT_EQ(nullptr,
+            MediaRouterUIServiceFactory::GetInstance()->BuildServiceInstanceFor(
+                profile_.get()));
 }
 
 }  // namespace media_router
